--- a/index.html
+++ b/index.html
@@ -32,9 +32,150 @@
             <img src="assets/Banner Image.png" alt="">
         </div>
     </header>
-
-    </div>
+    <section class="blog-container">
+        <div class="blogs">
+            <div class="menu-container">
+                <a href="" class="menu-btn">Upcoming Match</a>
+                <a href="" class="menu-btn">All Groups</a>
+                <a href="" class="menu-btn special-btn">Blog</a>
+            </div>
+            <div class="transfer-section">
+                <div class="thumbnail">
+                    <img src="assets/Blog Image.png" alt=""></img>
+                    <div class="transfer-details">
+                        <a href="">Transfer</a>
+                        <h1>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h1>
+                        <div class="thumbnail-info">
+                            <div class="time-icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                            </div>
+                            <div class="comment-icon">
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img src="assets/Blog Image.png" alt=""></img>
+                    <div class="transfer-details">
+                        <a href="">Transfer</a>
+                        <h1>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h1>
+                        <div class="thumbnail-info">
+                            <div class="time-icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                            </div>
+                            <div class="comment-icon">
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img src="assets/Blog Image.png" alt=""></img>
+                    <div class="transfer-details">
+                        <a href="">Transfer</a>
+                        <h1>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h1>
+                        <div class="thumbnail-info">
+                            <div class="time-icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                            </div>
+                            <div class="comment-icon">
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img src="assets/Blog Image.png" alt=""></img>
+                    <div class="transfer-details">
+                        <a href="">Transfer</a>
+                        <h1>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h1>
+                        <div class="thumbnail-info">
+                            <div class="time-icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                            </div>
+                            <div class="comment-icon">
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img src="assets/Blog Image.png" alt=""></img>
+                    <div class="transfer-details">
+                        <a href="">Transfer</a>
+                        <h1>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h1>
+                        <div class="thumbnail-info">
+                            <div class="time-icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                            </div>
+                            <div class="comment-icon">
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img src="assets/Blog Image.png" alt=""></img>
+                    <div class="transfer-details">
+                        <a href="">Transfer</a>
+                        <h1>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h1>
+                        <div class="thumbnail-info">
+                            <div class="time-icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                            </div>
+                            <div class="comment-icon">
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
+<footer>
+    <div class="footer-title">
+        <h3>Goal</h3>
+    </div>
+    <hr>
+    <div class="footer-menu">
+        <a href="" class="footer-menu-name">Contact Us</a>
+        <a href="" class="footer-menu-name">Terms of Service</a>
+        <a href="" class="footer-menu-name">Privacy Policy</a>
+        <a href="" class="footer-menu-name">Privacy Settings</a>
+        <a href="" class="footer-menu-name">Goal App</a>
+        <a href="" class="footer-menu-name">Goal Live</a>
+    </div>
+    <div class="social-icon">
+        <div>
+            <i class="fa-brands fa-facebook"></i>
+        </div>
+        <div>
+            <i class="fa-brands fa-instagram"></i>
+        </div>
+        <div>
+            <i class="fa-brands fa-linkedin"></i>
+        </div>
+    </div>
+</footer>
 
 </html>
