--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Font Awsome -->
     <script src="https://kit.fontawesome.com/3313ac15c6.js" crossorigin="anonymous"></script>
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style-index.css">
     <title>World Cup</title>
 
 </head>
@@ -35,9 +35,9 @@
     <section class="blog-container">
         <div class="blogs">
             <div class="menu-container">
-                <a href="" class="menu-btn">Upcoming Match</a>
+                <a href="upmatch.html" class="menu-btn">Upcoming Match</a>
                 <a href="" class="menu-btn">All Groups</a>
-                <a href="" class="menu-btn special-btn">Blog</a>
+                <a href="index.html" class="menu-btn special-btn">Blog</a>
             </div>
             <div class="transfer-section">
                 <div class="thumbnail">
