--- a/index.html
+++ b/index.html
@@ -10,147 +10,155 @@
     <!-- Font Awsome -->
     <script src="https://kit.fontawesome.com/3313ac15c6.js" crossorigin="anonymous"></script>
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="styles/style-index.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>World Cup</title>
 
 </head>
 
 <body>
-    <header class="cover-container">
-        <div class="cover-title-info">
-            <h1>The Greatest
-                show on the
-                earth</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo
-                animal noluisse,
-                enim</p>
-            <a class="" href="">Watch Live <span class="watch-icon"><i
-                        class="fa-solid fa-angle-right"></i></span></i></i></a>
-        </div>
-        <div>
-            <img src="assets/Banner Image.png" alt="">
-        </div>
-    </header>
-    <section class="blog-container">
-        <div class="blogs">
-            <div class="menu-container">
-                <a href="upmatch.html" class="menu-btn">Upcoming Match</a>
-                <a href="" class="menu-btn">All Groups</a>
-                <a href="index.html" class="menu-btn special-btn">Blog</a>
+    <main>
+        <!-- Cover Start Here-->
+        <header class="cover-container">
+            <div class="cover-title-info">
+                <h1>The Greatest
+                    show on the
+                    earth</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset. No duo populo
+                    animal noluisse,
+                    enim</p>
+                <a class="" href="">Watch Live <span class="watch-icon"><i
+                            class="fa-solid fa-angle-right"></i></span></i></i></a>
             </div>
-            <div class="transfer-section">
-                <div class="thumbnail">
-                    <img src="assets/Blog Image.png" alt=""></img>
-                    <div class="transfer-details">
-                        <a href="">Transfer</a>
-                        <h1>Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h1>
-                        <div class="thumbnail-info">
-                            <div class="time-icon">
-                                <i class="fa-regular fa-clock"></i>
-                                <span>10h</span>
-                            </div>
-                            <div class="comment-icon">
-                                <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
+            <div>
+                <img src="assets/Banner Image.png" alt="">
+            </div>
+        </header>
+        <!-- Cover End Here-->
+
+        <!-- Mid Section Here-->
+        <section class="blog-container">
+            <div class="blogs">
+                <div class="menu-container">
+                    <a href="upmatch.html" class="menu-btn">Upcoming Match</a>
+                    <a href="" class="menu-btn">All Groups</a>
+                    <a href="index.html" class="menu-btn special-btn">Blog</a>
+                </div>
+                <div class="transfer-section">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt=""></img>
+                        <div class="transfer-details">
+                            <a href="">Transfer</a>
+                            <h1>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h1>
+                            <div class="thumbnail-info">
+                                <div class="time-icon">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="comment-icon">
+                                    <i class="fa-regular fa-comment-dots"></i>
+                                    <span>23</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="thumbnail">
-                    <img src="assets/Blog Image.png" alt=""></img>
-                    <div class="transfer-details">
-                        <a href="">Transfer</a>
-                        <h1>Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h1>
-                        <div class="thumbnail-info">
-                            <div class="time-icon">
-                                <i class="fa-regular fa-clock"></i>
-                                <span>10h</span>
-                            </div>
-                            <div class="comment-icon">
-                                <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="thumbnail">
-                    <img src="assets/Blog Image.png" alt=""></img>
-                    <div class="transfer-details">
-                        <a href="">Transfer</a>
-                        <h1>Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h1>
-                        <div class="thumbnail-info">
-                            <div class="time-icon">
-                                <i class="fa-regular fa-clock"></i>
-                                <span>10h</span>
-                            </div>
-                            <div class="comment-icon">
-                                <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt=""></img>
+                        <div class="transfer-details">
+                            <a href="">Transfer</a>
+                            <h1>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h1>
+                            <div class="thumbnail-info">
+                                <div class="time-icon">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="comment-icon">
+                                    <i class="fa-regular fa-comment-dots"></i>
+                                    <span>23</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="thumbnail">
-                    <img src="assets/Blog Image.png" alt=""></img>
-                    <div class="transfer-details">
-                        <a href="">Transfer</a>
-                        <h1>Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h1>
-                        <div class="thumbnail-info">
-                            <div class="time-icon">
-                                <i class="fa-regular fa-clock"></i>
-                                <span>10h</span>
-                            </div>
-                            <div class="comment-icon">
-                                <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="thumbnail">
-                    <img src="assets/Blog Image.png" alt=""></img>
-                    <div class="transfer-details">
-                        <a href="">Transfer</a>
-                        <h1>Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h1>
-                        <div class="thumbnail-info">
-                            <div class="time-icon">
-                                <i class="fa-regular fa-clock"></i>
-                                <span>10h</span>
-                            </div>
-                            <div class="comment-icon">
-                                <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt=""></img>
+                        <div class="transfer-details">
+                            <a href="">Transfer</a>
+                            <h1>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h1>
+                            <div class="thumbnail-info">
+                                <div class="time-icon">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="comment-icon">
+                                    <i class="fa-regular fa-comment-dots"></i>
+                                    <span>23</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="thumbnail">
-                    <img src="assets/Blog Image.png" alt=""></img>
-                    <div class="transfer-details">
-                        <a href="">Transfer</a>
-                        <h1>Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h1>
-                        <div class="thumbnail-info">
-                            <div class="time-icon">
-                                <i class="fa-regular fa-clock"></i>
-                                <span>10h</span>
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt=""></img>
+                        <div class="transfer-details">
+                            <a href="">Transfer</a>
+                            <h1>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h1>
+                            <div class="thumbnail-info">
+                                <div class="time-icon">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="comment-icon">
+                                    <i class="fa-regular fa-comment-dots"></i>
+                                    <span>23</span>
+                                </div>
                             </div>
-                            <div class="comment-icon">
-                                <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
+                        </div>
+                    </div>
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt=""></img>
+                        <div class="transfer-details">
+                            <a href="">Transfer</a>
+                            <h1>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h1>
+                            <div class="thumbnail-info">
+                                <div class="time-icon">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="comment-icon">
+                                    <i class="fa-regular fa-comment-dots"></i>
+                                    <span>23</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt=""></img>
+                        <div class="transfer-details">
+                            <a href="">Transfer</a>
+                            <h1>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h1>
+                            <div class="thumbnail-info">
+                                <div class="time-icon">
+                                    <i class="fa-regular fa-clock"></i>
+                                    <span>10h</span>
+                                </div>
+                                <div class="comment-icon">
+                                    <i class="fa-regular fa-comment-dots"></i>
+                                    <span>23</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <!-- Mid Section End Here-->
+    </main>
+
 </body>
 <footer>
     <div class="footer-title">
