--- a/upmatch.html
+++ b/upmatch.html
@@ -10,153 +10,155 @@
     <!-- Font Awsome -->
     <script src="https://kit.fontawesome.com/3313ac15c6.js" crossorigin="anonymous"></script>
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="styles/style-upmatch.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>World Cup</title>
 
 </head>
 
 <body>
-    <header class="cover-container">
-        <div class="cover-title-info">
-            <h1>The Greatest
-                show on the
-                earth</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo
-                animal noluisse,
-                enim</p>
-            <a class="" href="">Watch Live <span class="watch-icon"><i
-                        class="fa-solid fa-angle-right"></i></span></i></i></a>
-        </div>
-        <div>
-            <img src="assets/Banner Image.png" alt="">
-        </div>
-    </header>
-    <section class="blog-container">
-        <div class="blogs">
-            <div class="menu-container">
-                <a href="upmatch.html" class="menu-btn special-btn">Upcoming Match</a>
-                <a href="" class="menu-btn">All Groups</a>
-                <a href="index.html" class="menu-btn">Blog</a>
+    <main>
+        <header class="cover-container">
+            <div class="cover-title-info">
+                <h1>The Greatest
+                    show on the
+                    earth</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset. No duo populo
+                    animal noluisse,
+                    enim</p>
+                <a class="" href="">Watch Live <span class="watch-icon"><i
+                            class="fa-solid fa-angle-right"></i></span></i></i></a>
             </div>
-            <div class="match-section">
-                <div class="thumbnail">
-                    <div class="vsflag">
-                        <div>
-                            <img src="assets/Flag.png" alt="">
-                        </div>
-                        <div>
-                            <h4>VS</h4>
-                        </div>
-                        <div>
-                            <img src="assets/germany flag.png" alt="">
-                        </div>
-                    </div>
-                    <div>
-                        <h2>Germany VS France</h2>
-                        <div class="match-info">
-                            <p>April 01, 2023, 1.00 AM</p>
-                        </div>
-                    </div>
+            <div>
+                <img src="assets/Banner Image.png" alt="">
+            </div>
+        </header>
+        <section class="blog-container">
+            <div class="blogs">
+                <div class="menu-container">
+                    <a href="upmatch.html" class="menu-btn special-btn">Upcoming Match</a>
+                    <a href="" class="menu-btn">All Groups</a>
+                    <a href="index.html" class="menu-btn">Blog</a>
                 </div>
-                <div class="thumbnail">
-                    <div class="vsflag">
-                        <div>
-                            <img src="assets/Flag.png" alt="">
+                <div class="match-section">
+                    <div class="thumbnail-match">
+                        <div class="vsflag">
+                            <div>
+                                <img src="assets/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <h4>VS</h4>
+                            </div>
+                            <div>
+                                <img src="assets/germany flag.png" alt="">
+                            </div>
                         </div>
                         <div>
-                            <h4>VS</h4>
-                        </div>
-                        <div>
-                            <img src="assets/germany flag.png" alt="">
+                            <h2>Germany VS France</h2>
+                            <div class="match-info">
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <h2>Germany VS France</h2>
-                        <div class="match-info">
-                            <p>April 01, 2023, 1.00 AM</p>
+                    <div class="thumbnail-match">
+                        <div class="vsflag">
+                            <div>
+                                <img src="assets/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <h4>VS</h4>
+                            </div>
+                            <div>
+                                <img src="assets/germany flag.png" alt="">
+                            </div>
+                        </div>
+                        <div>
+                            <h2>Germany VS France</h2>
+                            <div class="match-info">
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="thumbnail">
-                    <div class="vsflag">
-                        <div>
-                            <img src="assets/Flag.png" alt="">
+                    <div class="thumbnail-match">
+                        <div class="vsflag">
+                            <div>
+                                <img src="assets/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <h4>VS</h4>
+                            </div>
+                            <div>
+                                <img src="assets/germany flag.png" alt="">
+                            </div>
                         </div>
                         <div>
-                            <h4>VS</h4>
-                        </div>
-                        <div>
-                            <img src="assets/germany flag.png" alt="">
+                            <h2>Germany VS France</h2>
+                            <div class="match-info">
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <h2>Germany VS France</h2>
-                        <div class="match-info">
-                            <p>April 01, 2023, 1.00 AM</p>
+                    <div class="thumbnail-match">
+                        <div class="vsflag">
+                            <div>
+                                <img src="assets/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <h4>VS</h4>
+                            </div>
+                            <div>
+                                <img src="assets/germany flag.png" alt="">
+                            </div>
+                        </div>
+                        <div>
+                            <h2>Germany VS France</h2>
+                            <div class="match-info">
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="thumbnail">
-                    <div class="vsflag">
-                        <div>
-                            <img src="assets/Flag.png" alt="">
+                    <div class="thumbnail-match">
+                        <div class="vsflag">
+                            <div>
+                                <img src="assets/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <h4>VS</h4>
+                            </div>
+                            <div>
+                                <img src="assets/germany flag.png" alt="">
+                            </div>
                         </div>
                         <div>
-                            <h4>VS</h4>
-                        </div>
-                        <div>
-                            <img src="assets/germany flag.png" alt="">
+                            <h2>Germany VS France</h2>
+                            <div class="match-info">
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <h2>Germany VS France</h2>
-                        <div class="match-info">
-                            <p>April 01, 2023, 1.00 AM</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="thumbnail">
-                    <div class="vsflag">
-                        <div>
-                            <img src="assets/Flag.png" alt="">
-                        </div>
-                        <div>
-                            <h4>VS</h4>
+                    <div class="thumbnail-match">
+                        <div class="vsflag">
+                            <div>
+                                <img src="assets/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <h4>VS</h4>
+                            </div>
+                            <div>
+                                <img src="assets/germany flag.png" alt="">
+                            </div>
                         </div>
                         <div>
-                            <img src="assets/germany flag.png" alt="">
-                        </div>
-                    </div>
-                    <div>
-                        <h2>Germany VS France</h2>
-                        <div class="match-info">
-                            <p>April 01, 2023, 1.00 AM</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="thumbnail">
-                    <div class="vsflag">
-                        <div>
-                            <img src="assets/Flag.png" alt="">
-                        </div>
-                        <div>
-                            <h4>VS</h4>
-                        </div>
-                        <div>
-                            <img src="assets/germany flag.png" alt="">
-                        </div>
-                    </div>
-                    <div>
-                        <h2>Germany VS France</h2>
-                        <div class="match-info">
-                            <p>April 01, 2023, 1.00 AM</p>
+                            <h2>Germany VS France</h2>
+                            <div class="match-info">
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 </body>
 <footer>
     <div class="footer-title">
