--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
                     </div>
                 </div>
             </div>
+            <div>
+                <a href="">View All</a>
+            </div>
         </section>
         <!-- Mid Section End Here-->
     </main>
