--- a/upmatch.html
+++ b/upmatch.html
@@ -17,15 +17,15 @@
 
 <body>
     <main>
+        <!-- Cover-Banner-Start-Here -->
         <header class="cover-container">
             <div class="cover-title-info">
                 <h1>The Greatest
                     show on the
                     earth</h1>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                    deterruisset. No duo populo
-                    animal noluisse,
-                    enim</p>
+                <p>The FIFA World Cup, often simply called the World Cup, is an international association football
+                    competition contested by
+                    the senior men's national teams of the members of FIFA</p>
                 <a class="" href="">Watch Live <span class="watch-icon"><i
                             class="fa-solid fa-angle-right"></i></span></i></i></a>
             </div>
@@ -33,6 +33,9 @@
                 <img src="assets/Banner Image.png" alt="">
             </div>
         </header>
+        <!-- Cover-Banner-End-Here -->
+
+        <!-- Mid-Section-Start-Here -->
         <section class="blog-container">
             <div class="blogs">
                 <div class="menu-container">
@@ -158,6 +161,13 @@
                 </div>
             </div>
         </section>
+        <!-- Mid-Section-Start-Here -->
+
+        <!-- View-Button-TabView -->
+        <div class="view-btn">
+            <a class="special-btn" href="">View All</a>
+        </div>
+        <!-- View-Button-TabView End Here-->
     </main>
 </body>
 <footer>
@@ -173,17 +183,20 @@
         <a href="" class="footer-menu-name">Goal App</a>
         <a href="" class="footer-menu-name">Goal Live</a>
     </div>
+
+    <!-- Special-Icon Start Here-->
     <div class="social-icon">
         <div>
-            <i class="fa-brands fa-facebook"></i>
+            <a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
         </div>
         <div>
-            <i class="fa-brands fa-instagram"></i>
+            <a target="_blank" href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <div>
-            <i class="fa-brands fa-linkedin"></i>
+            <a target="_blank" href="https://github.com/"><i class="fa-brands fa-github"></i></i></a>
         </div>
     </div>
+    <!-- Special-Icon Start Here-->
 </footer>
 
 </html>
