--- a/upmatch.html
+++ b/upmatch.html
@@ -23,9 +23,9 @@
                 <h1>The Greatest
                     show on the
                     earth</h1>
-                <p>The FIFA World Cup, often simply called the World Cup, is an international association football
-                    competition contested by
-                    the senior men's national teams of the members of FIFA</p>
+                <p>The World Cup is the most prestigious association football tournament in the world, as well as the
+                    most
+                    widely viewed and followed single sporting event in the world.</p>
                 <a class="" href="">Watch Live <span class="watch-icon"><i
                             class="fa-solid fa-angle-right"></i></span></i></i></a>
             </div>
