Animation Added and Complete

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <main>
         <!-- Cover Start Here-->
         <header class="cover-container">
+
             <div class="cover-title-info">
                 <h1>The Greatest
                     show on the
@@ -29,6 +30,11 @@
                 <a class="" href="">Watch Live <span class="watch-icon"><i
                             class="fa-solid fa-angle-right"></i></span></i></i></a>
             </div>
+            <!-- Animation -->
+            <div class="ball">
+                <img src="assets/football.png" alt="">
+            </div>
+            <!-- Animation End Here-->
             <div>
                 <img src="assets/BannerImage.png" alt="">
             </div>
